--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,11 @@ main:
     url: /curriculum/
   - title: "Code"
     url: /code/
-  - title: "Research Projects"
+  - title: "Research"
     url: /research/
+  - title: "Proyects"
+  url: /collection-archive/
+  
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
