--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@ main:
     url: /code/
   - title: "Research"
     url: /research/
-  - title: "Proyects"
-  url: /collection-archive/
+  #- title: "Proyects"
+  #url: /collection-archive/
   
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
