--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   gitlab           :
   google_plus      :
   keybase          :
-  instagram        : ""
+  instagram        : 
   lastfm           :
   linkedin         : "stephy-r-17a984123/" # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
