--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ locale                   : "en-PE"
 title                    : "Stephy Riega"
 title_separator          : "-"
 name                     : "Stephy Riega"
-description              : "Undergraduate Economics student at PUCP"
+description              : "Econ student at PUCP"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
