--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ analytics:
 author:
   name             : "Stephy Riega"
   avatar           : "/images/biopic.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Undergraduate Economics student at PUCP"
+  bio              : "Econ student at PUCP"
   location         : "Lima, PE"
   email            :
   uri              :
