--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /about/
   - title: "CV"
     url: /curriculum/
-  - title: "Codes
+  - title: "Projects"
     url: /code/
   - title: "Research"
     url: /research/
