--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
-  #- title: "About me"
-  # url: /about/
+  - title: "About me"
+    url: /about/
   - title: "CV"
     url: /curriculum/
   - title: "Projects"
