--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,19 @@
 # main links links
 main:
+  - title: "CV"
+    url: /cv/
+
   - title: "Research"
     url: /publications/
 
   - title: "Publications"
     url: /teaching/    
     
-  - title: "Codes"
+  - title: "Projects"
     url: /portfolio/
         
-  - title: "Blog Posts"
+  - title: "Posts"
     url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
     
   - title: "Talks"
     url: /talks/    
