--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 # Site Author
 author:
   name             : "Stephy Riega"
-  avatar           : "/images/profile.png"
+  avatar           : "/images/biopic.png"
   bio              : "Curious human being, feminist & Economist"
   location         : "Lima, Peru"
   employer         : "Innovations for Poverty Actions"
