--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   avatar           : "/images/profile.png"
   bio              : "Curious human being, feminist & Economist"
   location         : "Lima, Peru"
-  employer         : "Innovations for Poverty Actions"
+  employer         : "IPA"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://scholar.google.com"
   email            :
